--- a/client/src/Components/ControllerComponent.css
+++ b/client/src/Components/ControllerComponent.css
@@ -9,14 +9,36 @@
     margin-bottom: 5em;
 }
 
+.controller button {
+    padding: 1em;
+    margin: 0.5em;
+    cursor: pointer;
+}
+
+.service button, .service {
+    margin-bottom: 1em;
+}
+
+.controller .category {
+    padding: 0;
+    border: solid 1px #999;
+    margin: 0.5em;
+}
+
 .lyrics-form {
     display: flex;
     flex-direction: column;
     column-gap: 0.3em;
+    margin-bottom: 1.5em;
+    margin-top: 1em;
+    padding: 1em;
+    border: 1px solid #999;
+    border-radius: 4px;
 }
 
 .lyrics-form div {
     display: flex;
+    gap: 0.5em;
 }
 
 .service {
@@ -27,10 +49,19 @@ button.warn {
     background-color: rgb(177, 74, 61);
 }
 
+.warn {
+    font-weight: bold;
+}
+
 .lyrics-form input {
     line-height: 2em;
     font-size: 1em;
     flex: 1;
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 .category {
@@ -47,11 +78,49 @@ button {
     margin: 0.2em;
     flex: 1;
 }
+
 .category .title {
     flex: 1;
     background-color: rgb(99, 144, 212);
+    font-weight: bold;
 }
 
 .category .songs {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.track-id-form {
+    margin: 1em 0.5em;
+    padding: 1em;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.track-id-form .form-group {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    margin-bottom: 0.5em;
+}
+
+.track-id-form label {
+    font-weight: bold;
+    min-width: 120px;
+}
+
+.track-id-input {
+    flex: 1;
+    padding: 8px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.helper-text {
+    font-size: 0.85em;
+    color: #666;
+    margin-top: 4px;
 }
